# hello-rust

./: .dockerignore  .editorconfig  AGENTS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
src/: config.rs  main.rs
src/web/: error.rs  handlers.rs  handlers_tests.rs  mod.rs  router.rs  tracing.rs
