[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Didier-Lane/hello-rust"
homepage = "https://github.com/Didier-Lane/hello-rust"
documentation = "https://docs.rs/hello-rust"
keywords = ["web", "axum", "http"]
categories = ["web-programming", "asynchronous"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ferris-says = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
